--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,28 @@
 </head>
 <body>
   <app-root></app-root>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAluQjpN8nNDMDGZAsRaXU_kyGg845WLV8",
+      authDomain: "hacker-news-dfc38.firebaseapp.com",
+      projectId: "hacker-news-dfc38",
+      storageBucket: "hacker-news-dfc38.appspot.com",
+      messagingSenderId: "919167502666",
+      appId: "1:919167502666:web:834cdddbdee373166899b3",
+      measurementId: "G-HXMJYPTVDB"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
